--- a/guide.html
+++ b/guide.html
@@ -16,15 +16,15 @@
   </header>
   <section>
     <h2>Steps to Achieve My Goal as a Lawyer</h2>
-    <ol>
-      <li>Complete SPM with excellent results</li>
-      <li>Enroll in a recognized pre-law or foundation program</li>
-      <li>Obtain a Bachelor's Degree in Law (LLB)</li>
-      <li>Undertake a chambering period with a legal firm</li>
-      <li>Pass the Certificate in Legal Practice (CLP) or equivalent</li>
-      <li>Get called to the Bar and become a qualified advocate & solicitor</li>
-      <li>Pursue specialization or postgraduate law studies</li>
-    </ol>
+    <div class="flowchart">
+      <div class="step">Complete SPM with excellent results</div>
+      <div class="step">Enroll in a recognized pre-law or foundation program</div>
+      <div class="step">Obtain a Bachelor's Degree in Law (LLB)</div>
+      <div class="step">Undertake a chambering period with a legal firm</div>
+      <div class="step">Pass the Certificate in Legal Practice (CLP) or equivalent</div>
+      <div class="step">Get called to the Bar and become a qualified advocate & solicitor</div>
+      <div class="step">Pursue specialization or postgraduate law studies</div>
+    </div>
   </section>
   <footer class="guide">
     &copy; 2025 Career Dreams
