--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </header>
   <section>
     <h2>My Dream Career: Lawyer</h2>
+    <img src="me.jpg" alt="Lawyer Career" width="600">
     <p>I aspire to become a lawyer to uphold justice, protect the rights of others, and contribute meaningfully to society. Law offers a platform to bring change and stand up for truth.</p>
   </section>
   <footer class="home">
