--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <section>
     <h2>My Dream Career: Lawyer</h2>
     <div style="text-align: center;">
-  <img src="images/lawyer.jpg" alt="Lawyer Career" width="600">
+  <img src="me.jpg" alt="Lawyer Career" width="650">
 </div>
     <p>I aspire to become a lawyer to uphold justice, protect the rights of others, and contribute meaningfully to society. Law offers a platform to bring change and stand up for truth.</p>
   </section>
