--- a/index.html
+++ b/index.html
@@ -2,27 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>The Path to Success: Achieving Your Career Dreams</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>The Path to Success: Lawyer</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="home">
-  <header class="home">
+<body class="homepage">
+
+  <header>
     <h1>The Path to Success: Achieving Your Career Dreams</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="guide.html">Guide</a>
+      <a href="guide.html">Step-by-Step</a>
       <a href="inspiration.html">Inspiration</a>
     </nav>
   </header>
-  <section>
-    <h2>My Dream Career: Lawyer</h2>
-    <div style="text-align: center;">
-  <img src="me.jpg" alt="Lawyer Career" width="650">
-</div>
-    <p>I aspire to become a lawyer to uphold justice, protect the rights of others, and contribute meaningfully to society. Law offers a platform to bring change and stand up for truth.</p>
+
+  <section class="intro-section">
+    <img src="me.jpg" alt="Lawyer at work" class="center-img">
+    <div class="intro-text">
+      <h2>My Dream Career: Lawyer</h2>
+      <p>Ever since I was young, I've been fascinated by justice and the power of words. 
+      I aspire to become a successful lawyer who upholds truth and defends those in need. 
+      This website outlines my journey, step by step, to achieving that goal.</p>
+    </div>
   </section>
-  <footer class="home">
-    &copy; 2025 Career Dreams
-  </footer>
+
 </body>
 </html>
+
