--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>The Path to Success</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>The Path to Success: Achieving Your Career Dreams</h1>
+    <div class="container">
+      <h1>The Path to Success: Achieving Your Career Dreams</h1>
+    </div>
   </header>
 
-  <main>
-    <h2>My Dream Career: Lawyer</h2>
-<img src="lawyer-image.jpg" alt="Lawyer at work" class="oval-img" width="400">
-    <p>Becoming a lawyer has always been my passion. Advocating for justice and helping people navigate legal systems inspire me to pursue this path.</p>
-    <img src="lawyer-image.jpg" alt="Lawyer at work" width="400">
-    <p><a href="steps.html">See the step-by-step guide →</a></p>
+  <main class="container homepage">
+    <div class="text-section">
+      <h2>My Dream Career: Lawyer</h2>
+      <p>As a lawyer, I aspire to uphold justice, represent those in need, and make a difference through legal expertise and ethical practice. The legal field is a noble path that requires passion, dedication, and intellect.</p>
+      <a href="steps.html" class="btn">Step-by-Step Guide</a>
+    </div>
+    <div class="image-section">
+      <img src="me.jpg" alt="Lawyer Image" class="oval-img" />
+    </div>
   </main>
 </body>
 </html>
