--- a/inspiration.html
+++ b/inspiration.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Inspiration & Resources</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Inspiration & Resources</h1>
+    <div class="container">
+      <h1>Inspiration & Resources</h1>
+    </div>
   </header>
 
-  <main>
-    <table border="1">
+  <main class="container">
+    <table>
       <tr>
         <th>Name</th>
-        <th>Description</th>
+        <th>Background</th>
         <th>Link</th>
       </tr>
       <tr>
         <td>Tun Laila</td>
-        <td>Prominent legal figure and inspiration for many aspiring lawyers.</td>
-        <td><a href="https://example.com/tun-laila" target="_blank">Learn more</a></td>
+        <td>Renowned for legal contributions and advocacy for justice.</td>
+        <td><a href="https://example.com/tunlaila" target="_blank">Visit Site</a></td>
       </tr>
       <tr>
         <td>Dato Ahmad Zaharil</td>
-        <td>Renowned Malaysian lawyer with a powerful voice in legal reform.</td>
-        <td><a href="https://example.com/ahmad-zaharil" target="_blank">Learn more</a></td>
+        <td>Respected Malaysian lawyer known for high-profile cases.</td>
+        <td><a href="https://example.com/zaharil" target="_blank">Visit Site</a></td>
       </tr>
     </table>
-    <p><a href="index.html">← Back to homepage</a></p>
+    <a href="index.html" class="btn">← Back to Homepage</a>
   </main>
 </body>
 </html>
+
