--- a/steps.html
+++ b/steps.html
@@ -13,16 +13,8 @@
   </header>
 
   <main class="container">
-    <ol class="step-list">
-      <li>Complete secondary school with excellent results.</li>
-      <li>Enroll in a recognized law school or university.</li>
-      <li>Earn a Bachelor of Laws (LL.B.) degree.</li>
-      <li>Pass the Certificate in Legal Practice (CLP) or equivalent.</li>
-      <li>Complete chambering/pupillage under a law firm.</li>
-      <li>Get called to the Bar and start practicing as a lawyer.</li>
-    </ol>
-    <a href="inspiration.html" class="btn">Inspiration & Resources</a>
-  </main>
-</body>
-</html>
-
+    <div class="steps-container">
+      <div class="step-card">1. Complete secondary school with excellent results.</div>
+      <div class="step-card">2. Enroll in a recognized law school or university.</div>
+      <div class="step-card">3. Earn a Bachelor of Laws (LL.B.) degree.</div>
+      <div class="step-card">4. Pass the Certificate in Legal Practice (CLP) or equivalent.</
