--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>The Path to Success</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header class="header">
     <div class="container">
       <h1>The Path to Success: Achieving Your Career Dreams</h1>
     </div>
   </header>
 
-  <main class="container homepage">
-    <div class="text-section">
+  <main class="hero container">
+    <div class="hero-text">
       <h2>My Dream Career: Lawyer</h2>
-      <p>As a lawyer, I aspire to uphold justice, represent those in need, and make a difference through legal expertise and ethical practice. The legal field is a noble path that requires passion, dedication, and intellect.</p>
-      <a href="steps.html" class="btn">Step-by-Step Guide</a>
+      <p>I aspire to become a lawyer who upholds justice, defends the rights of individuals, and contributes to a better society. Law is my passion and calling.</p>
+      <a href="steps.html" class="btn">View My Career Steps →</a>
     </div>
-    <div class="image-section">
-      <img src="me.jpg" alt="Lawyer Image" class="oval-img" />
+    <div class="hero-image">
+      <img src="me.jpg" alt="Lawyer" class="oval-img">
     </div>
   </main>
 </body>
