--- a/steps.html
+++ b/steps.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Step by Step Guide</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Step-by-Step Guide</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header class="header">
     <div class="container">
       <h1>Step-by-Step Guide</h1>
     </div>
   </header>
 
   <main class="container">
-    <div class="steps-container">
+    <div class="steps-grid">
       <div class="step-card">1. Complete secondary school with excellent results.</div>
       <div class="step-card">2. Enroll in a recognized law school or university.</div>
       <div class="step-card">3. Earn a Bachelor of Laws (LL.B.) degree.</div>
-      <div class="step-card">4. Pass the Certificate in Legal Practice (CLP) or equivalent.</
+      <div class="step-card">4. Pass the Certificate in Legal Practice (CLP) or equivalent.</div>
+      <div class="step-card">5. Complete chambering/pupillage under a law firm.</div>
+      <div class="step-card">6. Get called to the Bar and start practicing as a lawyer.</div>
+    </div>
+
+    <a href="inspiration.html" class="btn">→ Inspiration & Resources</a>
+  </main>
+</body>
+</html>
+
