--- a/inspiration.html
+++ b/inspiration.html
@@ -4,34 +4,41 @@
   <meta charset="UTF-8" />
   <title>Inspiration & Resources</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header class="header">
     <div class="container">
       <h1>Inspiration & Resources</h1>
     </div>
   </header>
 
   <main class="container">
-    <table>
-      <tr>
-        <th>Name</th>
-        <th>Background</th>
-        <th>Link</th>
-      </tr>
-      <tr>
-        <td>Tun Laila</td>
-        <td>Renowned for legal contributions and advocacy for justice.</td>
-        <td><a href="https://example.com/tunlaila" target="_blank">Visit Site</a></td>
-      </tr>
-      <tr>
-        <td>Dato Ahmad Zaharil</td>
-        <td>Respected Malaysian lawyer known for high-profile cases.</td>
-        <td><a href="https://example.com/zaharil" target="_blank">Visit Site</a></td>
-      </tr>
+    <table class="inspiration-table">
+      <thead>
+        <tr>
+          <th>Image</th>
+          <th>Name</th>
+          <th>Link</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><img src="images/tun-laila.jpg" alt="Tun Laila" class="table-img"></td>
+          <td>Tun Fatimah Hashim (Laila)</td>
+          <td><a href="https://en.wikipedia.org/wiki/Fatimah_Hashim" target="_blank">Wikipedia</a></td>
+        </tr>
+        <tr>
+          <td><img src="images/zaharil.jpg" alt="Dato Zaharil" class="table-img"></td>
+          <td>Dato Ahmad Zaharil</td>
+          <td><a href="https://www.linkedin.com/in/zaharil" target="_blank">LinkedIn</a></td>
+        </tr>
+      </tbody>
     </table>
-    <a href="index.html" class="btn">← Back to Homepage</a>
+
+    <a href="index.html" class="btn">← Back to Home</a>
   </main>
 </body>
 </html>
+
 
