--- a/inspiration.html
+++ b/inspiration.html
@@ -24,12 +24,12 @@
       </thead>
       <tbody>
         <tr>
-          <td><img src="images/tun-laila.jpg" alt="Tun Laila" class="table-img"></td>
+          <td><img src="images/laila.jpg" alt="Tun Laila" class="table-img"></td>
           <td>Tun Fatimah Hashim (Laila)</td>
           <td><a href="https://en.wikipedia.org/wiki/Fatimah_Hashim" target="_blank">Wikipedia</a></td>
         </tr>
         <tr>
-          <td><img src="images/zaharil.jpg" alt="Dato Zaharil" class="table-img"></td>
+          <td><img src="images/dato zaharil.jpg" alt="Dato Zaharil" class="table-img"></td>
           <td>Dato Ahmad Zaharil</td>
           <td><a href="https://www.linkedin.com/in/zaharil" target="_blank">LinkedIn</a></td>
         </tr>
