--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>The Path to Success</title>
+  <title>From Dreams to the Courtroom: The Lawyer’s Path</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="header">
     <div class="container">
-      <h1>The Path to Success: Achieving Your Career Dreams</h1>
+      <h1>From Dreams to the Courtroom: The Lawyer’s Path</h1>
     </div>
   </header>
 
