--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
   <main class="hero container">
     <div class="hero-text">
-      <h2>My Dream Career: Lawyer</h2>
-      <p>I aspire to become a lawyer who upholds justice, defends the rights of individuals, and contributes to a better society. Law is my passion and calling.</p>
+      <h2>Hai, I am Syazwina Ezwin</h2>
+      <p>I am a believer in justice and standing up for what is right. I am passionate about helping people and ensuring that everyone is treated fairly, no matter who they are.
+        Being a lawyer means more than just knowing the law, it means using it to protect others and improve our society. The law is not just something I want to learn, it is something
+        I truly care about. I hope to one day make a real difference by standing up for the rights of others and supporting justice in everything I do. This is my path.</p>
       <a href="steps.html" class="btn">View My Career Steps →</a>
     </div>
     <div class="hero-image">
