--- a/steps.html
+++ b/steps.html
@@ -15,12 +15,17 @@
 
   <main class="container">
     <div class="steps-grid">
-      <div class="step-card">1. Complete secondary school with excellent results.</div>
-      <div class="step-card">2. Enroll in a recognized law school or university.</div>
-      <div class="step-card">3. Earn a Bachelor of Laws (LL.B.) degree.</div>
-      <div class="step-card">4. Pass the Certificate in Legal Practice (CLP) or equivalent.</div>
+      <div class="step-card">1. After completing your Bachelor of New Media Communication, you need to decide whether
+        to pursue a law degree because your degree is not in law.</div>
+      <div class="step-card">2. Apply for admission to the Bachelor of Laws (LLB) programme at the University of Malaya (UM).
+        Applications are highly competitive and require excellent academic achievement.</div>
+      <div class="step-card">3. If the application is successful, need to attend an interview and written test conducted by the 
+        Faculty of Law, UM as part of the screening process.</div>
+      <div class="step-card">4. Once accepted, you will follow the 4-year LLB programme at UM which covers core subjects such as
+        Constitutional Law, Criminal Law, Contract Law and many more.</div>
       <div class="step-card">5. Complete chambering/pupillage under a law firm.</div>
-      <div class="step-card">6. Get called to the Bar and start practicing as a lawyer.</div>
+      <div class="step-card">6. Get called to the Bar and start practicing as a lawyer or open
+        my on firm.</div>
     </div>
 
     <a href="inspiration.html" class="btn">→ Inspiration & Resources</a>
