--- a/steps.html
+++ b/steps.html
@@ -15,16 +15,16 @@
 
   <main class="container">
     <div class="steps-grid">
-      <div class="step-card">1. After completing your Bachelor of New Media Communication, you need to decide whether
-        to pursue a law degree because your degree is not in law.</div>
-      <div class="step-card">2. Apply for admission to the Bachelor of Laws (LLB) programme at the University of Malaya (UM).
+      <div class="step-card">1. After completing the Bachelor of New Media Communication, i need to decide whether
+        to pursue a law degree because my degree is not in law.</div>
+      <div class="step-card">2. So i will apply for admission to the Bachelor of Laws (LLB) programme at the University of Malaya (UM).
         Applications are highly competitive and require excellent academic achievement.</div>
-      <div class="step-card">3. If the application is successful, need to attend an interview and written test conducted by the 
+      <div class="step-card">3. If the application is successful, i need to attend an interview and written test conducted by the 
         Faculty of Law, UM as part of the screening process.</div>
-      <div class="step-card">4. Once accepted, you will follow the 4-year LLB programme at UM which covers core subjects such as
+      <div class="step-card">4. Once accepted, i will follow the 4-year LLB programme at UM which covers core subjects such as
         Constitutional Law, Criminal Law, Contract Law and many more.</div>
-      <div class="step-card">5. Complete chambering/pupillage under a law firm.</div>
-      <div class="step-card">6. Get called to the Bar and start practicing as a lawyer or open
+      <div class="step-card">5. Then, complete chambering/pupillage under a law firm.</div>
+      <div class="step-card">6. Finally, get called to the Bar and start practicing as a lawyer or open
         my on firm.</div>
     </div>
 
